2002-03-06  Sam Steingold  <sds@gnu.org>

	infrastructure tweaks
	* makemake.in (XCFLAGS): handle --with-threads=FLAVOR by
	adding "-DMULTITHREAD -Dflavor"
	* configure (info_help): documented all options
	* Makefile.devel (upload): new target
	* autoconf/aclocal.m4 (CL_STRERROR, CL_FSYNC, CL_UALARM)
	(CL_USLEEP): removed trivial defuns
	* configure.in: call AC_CHECK_FUNCS for strerror(), fsync(),
	ualarm() and usleep() directly

2002-03-06  Sam Steingold  <sds@gnu.org>

	* foreign.d (FOREIGN-ADDRESS-VALUE): handle foreign pointers too

2002-03-04  Sam Steingold  <sds@gnu.org>

	* foreign1.lisp (to-c-typedecl): c-pointer --> void*, not char*
	* bindings/linuxlibc6/linux.lisp (flock): new call-out
	(fcntl2, fcntl3l, fcntl3f): 3 forms of fcntl()
	(ioctl-set, ioctl-get, ioctl): 3 forms of ioctl()
	* bindings/linuxlibc6/wrap.lisp (check-res): new macro
	(real-path, get-host-name, get-domain-name): use it
	* modules/clx/new-clx/clx.f: NOTREACHED and thus NOTIMPLEMENTED
	and UNDEFINED require a semicolon

2002-03-03  Sam Steingold  <sds@gnu.org>

	* version.h: 2.28 is released

2002-03-05  Sam Steingold  <sds@gnu.org>

	* spvw_garcol.d (gc_mark): added down_weakkvt(), up_weakkvt(),
	and case_weakkvt statements that call them (fixes weak HTs on
	the TYPECODES platforms)

2002-03-05  Sam Steingold  <sds@gnu.org>

	* array.d (elt_nreverse): do not use SIMPLE_NREVERSE for simple
	strings since TheSstring != TheSvector (breaks NREVERSE on Alpha)

2002-03-03  Sam Steingold  <sds@gnu.org>

	Compilation on Alpha/Linux
	* dfloat.d: SAVE_NUM_STACK/RESTORE_NUM_STACK want {} around them
	* lispbibl.d (weakkvt_type): removed extra '|'
	* spvw_typealloc.d: one cannot use `obj' in allocate() portably
	(allocate_weakkvt_low): renamed from allocate_weakkvt()
	(allocate_weakkvt): call allocate_weakkvt_low()

2002-03-03  Sam Steingold  <sds@gnu.org>

	build process portability
	* makemake.in (data, clean1, ${TESTDIR}): use the appropriate slashes
	(RM) [win32]: set to 'del /q' (~ rm -f)