@@ -228,8 +228,8 @@ CL_RENAME
                       dnl DEFS RENAME_CONST
 CL_UNLINK
                       dnl DEFS UNLINK_CONST
-AC_CHECK_FUNCS(fsync)
-                      dnl DEFS HAVE_FSYNC
+AC_CHECK_FUNCS(fsync flock)dnl ==> HAVE_FSYNC HAVE_FLOCK
+AC_CHECK_HEADERS(sys/file.h)dnl ==> HAVE_SYS_FILE_H
 CL_IOCTL
                       dnl DEFS IOCTL_REQUEST_T, IOCTL_ARGUMENT_T, IOCTL_DOTS, HAVE_FIONREAD, NEED_SYS_FILIO_H, NEED_SYS_IOCTL_H, HAVE_RELIABLE_FIONREAD
 CL_FCNTL
