@@ -17111,9 +17111,10 @@ local object check_open_file_stream (object obj) {
  fehler_bad_obj:
   pushSTACK(obj);                      # TYPE-ERROR slot DATUM
   pushSTACK(O(type_open_file_stream)); # TYPE-ERROR slot EXPECTED-TYPE
+  pushSTACK(S(file_stream));
   pushSTACK(obj);
   pushSTACK(TheSubr(subr_self)->name);
-  fehler(type_error,GETTEXT("~: argument ~ is not an open file stream"));
+  fehler(type_error,GETTEXT("~: argument ~ is not an open ~"));
 }
 
 # (FILE-POSITION file-stream [position]), CLTL p. 425
@@ -17416,13 +17417,46 @@ LISPFUNN(defgray,1) {
 
 #ifdef EXPORT_SYSCALLS
 #ifdef UNIX
-
 global object stream_fd (object stream) {
   stream = check_open_file_stream(stream);
   return UL_to_I(TheHandle(TheStream(stream)->strm_ochannel));
 }
-
 #endif # UNIX
+
+#ifdef HAVE_FLOCK
+
+#ifdef HAVE_SYS_FILE_H
+#include <sys/file.h>
+#endif
+
+# the interface to flock(2)
+# (STREAM-LOCK stream lock-p &key (block T) (shared NIL))
+LISPFUN(stream_lock,2,0,norest,key,2, (kw(shared),kw(block)) ) {
+  var int fd = -1;
+  var object stream = nullobj;
+  if (posfixnump(STACK_3)) fd = posfixnum_to_L(STACK_3) ;
+  else {
+    stream = check_open_file_stream(STACK_3);
+    fd = TheHandle(TheStream(stream)->strm_ochannel);
+  }
+  var bool lock_p = !nullp(STACK_2);
+  var int operation = !lock_p ? LOCK_UN
+    : (nullp(STACK_1) || eq(unbound,STACK_1) ? LOCK_EX : LOCK_SH);
+  if (nullp(STACK_0)) operation |= LOCK_NB;
+  begin_system_call();
+  var bool failed_p = flock(fd,operation);
+  end_system_call();
+  if (failed_p) {
+    if (eq(stream,nullobj)) OS_error();
+    else OS_filestream_error(stream);
+  }
+  skipSTACK(4);
+  value1 = (lock_p ? T : NIL);
+  mv_count = 1;
+}
+
+#endif
+
 #endif # EXPORT_SYSCALLS
 
 # =============================================================================
